--- a/css/small_game.css
+++ b/css/small_game.css
@@ -2,12 +2,17 @@ body {
     color: #fff;
     background-color: #000;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.25em;
+    padding: 0.5em;
+    margin: 0.5em;
 }
 
 .instructions {
-    border: 1px solid #555;
+    border: 0.5em solid #555;
     float: right;
+    padding: 1em;
 }
+
 .footer {
     position: fixed;
     bottom: 0;
